--- a/sphinx_ansible_theme/theme.conf
+++ b/sphinx_ansible_theme/theme.conf
@@ -8,10 +8,10 @@ canonical_url =
 analytics_id =
 collapse_navigation = True
 sticky_navigation = True
-navigation_depth = 4
+navigation_depth = 1
 includehidden = True
-titles_only =
-logo_only =
+titles_only = True
+logo_only = True
 display_version = True
 prev_next_buttons_location = bottom
 style_external_links = False
